css/uj4.css
body{
    font-size: 4.5vw;
    font-family: "Times New Roman", serif;
    padding: 3vw;
    padding-bottom: 0.5vw;
    padding-right: 12vw;
}

a:not(.link_box){
    white-space: pre-wrap;
    word-wrap: break-word;
}

header {
    display: flex;
}

header h1 {
    display: inline;
    font-size: 5vw;
    font-family: Helvetica, sans-serif;
    font-weight: normal;
}

header a{
    display: flex;
    text-decoration: none;
    color: inherit;
}

header img{
    width: 25vw;
    display: block;
    margin-right: 5vw;
    object-fit: contain;
}

hr{
    border-top: 2px solid #808080;
    width: 80%;
    margin-top: 4em;
}

#content table, td
{
    border: 1px solid black;
    border-collapse: collapse;
    padding: 5px;
    font-size: 3vw;
}

.video-container {
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    height: 0;
}
.video-container iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.link_box{
    display: inline-flex;
    border: 1px solid #000000;
    text-decoration: none;
    color: inherit;
    font-family: Height, sans-serif;
    box-shadow: 2px 2px 1px gray;
    overflow: hidden;
    max-height: 10em;
    width: 100%;
    height: 8em;
}

.link_box img{
    width: 50%;
    transition: transform 1s;
    object-fit: cover;
}

.link_box span{
    margin-left: 2em;
    margin-right: 1em;
    align-self: center;
    width: min-content;
}

.link_box:active{
    box-shadow: -1px -1px 1px gray;
}

.aktualis_box{
    margin-bottom: 2em;
}

.archiv_box{
    margin-bottom: 2em;
    margin-right: 5em;
}

.alkalom_kep{
    width: 100%;
}

#udvozles_wrapper{
    display: flex;
    margin-bottom: 5em;
}

#lutherrozsa_desktop{
    display: none;
}

#lutherrozsa_mobil{
    width: 3em;
    object-fit: contain;
}

#udvozles{
    align-self: center;
}

.aktualis_img{
    max-width: 90%;
}

.alkalmaink_box{
    margin-bottom: 2em;
}

.igehirdetes_wrapper{
    box-shadow: 2px 2px 1px gray;
    border: 1px solid #000000;
    margin-bottom: 3em;
}

.igehirdetes_box{
    font-size: 10pt;
    height: 13em;
    overflow: hidden;
    padding: 1em;
    -webkit-mask-image: linear-gradient(to bottom, white, transparent);
    mask-image: linear-gradient(to bottom, white, transparent);
    cursor: pointer;
    transition: transform 0.5s;
}

.igehirdetes_box:hover{
    transform: translateY(-1em);
    transition: transform 1.5s ease-out 0.5s;
}

.igehirdetes_wrapper:active{
    box-shadow: -2px -2px 1px gray;
}

#fooldal_kepek{
    position: relative;
}

#fooldal_kepek_link{
    position: absolute;
    width: 80%;
    height: 80%;
    top: 10%;
    left: 10%;
}


header nav input {
    opacity: 0;
    width: 0;
    height: 0;
    appearance: none;
    position: fixed;
}

header label {
    position: fixed;
    top: 0;
    right: 0;
    z-index: 10;
    display: flex;
    align-items: center;
    width: 7vw;
    height: 7vw;
    margin: 4vw;
}

header label span {
    display: block;
    width: 100%;
    background: #000000;
    height: 1vw;
    transition: transform 1s;
}

header label span::before,
    label span::after {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    display: block;
    height: 1vw;
    background: #000000;
    transition: 0.4s
	}

header label span::before {
    top: 0;
}

header label span::after {
    top: calc(100% - 1vw);
}

header nav ul {
    position: fixed;
    top: -15vh;
    bottom: -15vh;
    left: 0;
    right: 25vw;
    transform: translateX(-101vw);
    transition: transform 0.2s;
    background-color: #fbfbfb;
    padding-top: 15vh;
    color: #000000;
    box-shadow: 1vw 0vw 2vw #909090;
    font-size: 4vh;
    font-family: Helvetica, sans-serif;
    border-right: 1vw solid #38929b;
    z-index: 100;
}

header nav ul li{
    margin-left: 5vw;
    margin-bottom: 3vh;
    padding-bottom: 3vh;
    border-bottom: 3px solid #000000;
    list-style-type: none;
    width: 80%;
}

header nav ul li:last-of-type, header nav ul li:first-of-type{
    border: none;
}

header nav ul li a{
    color: inherit;
    text-decoration: none;
}

header nav input:checked + label span {
	transform: rotate(45deg);
}

header nav input:checked + label span::before, input:checked + label span::after {
	    top: calc(50% - 0.5vw);
	    transition: 0.4s;
}
header nav input:checked + label span::after {
	transform: rotate(90deg);
}

header nav input:checked ~ ul {
	transform: none;
	transition: transform 0.6s; 
}

.elerhetosegek_lista{
    font-family: Helvetica, sans-serif;
    font-size: 12pt;
    padding-left: 1em;
    list-style: none;
}

.elerhetosegek_lista li{
    margin-bottom: 1em;
}

.elerhetosegek_lista li li{
    margin-bottom: 0;
}

#sidebar{
    margin-top: 4em;
    border: 1vw solid #38929b;
    padding: 1em;
}

#napi_ige div{
    font-style: italic;
}

#napi_ige_ige{
    text-align: center;
}

#napi_ige_hely{
    text-align: right;
}

#sidebar h2{
    margin-top: 0;
    font-weight: normal;
}

#sidebar hr{
    display: none;
}

#elerhetosegek{
    display: none;
}

#kulso_linkek{
    display: none;
}

#kulso_linkek a{
    display: block;
    margin-bottom: 1em;
}

footer{
    font-size: 10pt;
    font-family: Helvetica, sans-serif;
    color: #ffffff;
    background-color: #38929b;
    margin-top: 20vw;
    padding-top: 0.75em;
    padding-bottom: 0.5em;
    padding-left: 1em;
}

#galeria_menu{
    font-size: 3vw;
    color: #ffffff;
    background-color: #38929b;
    font-family: Helvetica, sans-serif;
    margin-bottom: 1em;
}

#galeria_menu ul{
    padding-left: 0;
    max-height: 0;
    visibility: hidden;
    opacity: 0;
    transition: max-height 0.5s ease, opacity 1s linear;
}

#galeria_menu ul li{
    list-style-type: none;
    border-top: 0.5vw solid #000000;
    padding-top: 1em;
    margin-bottom: 1em;
}

#galeria_menu ul li:last-of-type{
    padding-bottom: 1em;
}

#galeria_menu ul li a{
    text-decoration: none;
    color: inherit;
    margin-left: 2em;
}
/* ... */

